diesel_compile_tests/tests/fail/table_column_names.stderr
error: Column `users` cannot be named the same as its table.
 You may use `#[sql_name = "users"]` to reference the table's `users` column.
 Docs available at: `https://docs.diesel.rs/diesel/macro.table.html`

 --> $DIR/table_column_names.rs:3:1
  |
3 | / table! {
4 | |     users {
5 | |         id -> Integer,
6 | |         users -> Integer,
7 | |     }
8 | | }
  | |_^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
